# rgnc

./: .gitignore  Cargo.toml  README.md  build.rs  plan.md
src/: lib.rs  main.rs
src/aero/: atmosphere.rs  coefficients.rs  mod.rs  wind.rs
src/dynamics/: eom.rs  gravity.rs  integrator.rs  mod.rs
src/guidance/: formulation.rs  linearize.rs  mod.rs  pdg.rs  scvx.rs  scvx_formulation.rs  trust_region.rs
src/gurobi/: ffi.rs  mod.rs  model.rs
src/io/: config.rs  output.rs
src/mission/: closed_loop.rs  mod.rs  montecarlo.rs  simulate.rs
src/robust/: chance_constr.rs  library.rs  mod.rs  safety_boundary.rs  scenario.rs
src/solver/: mip.rs  mod.rs  result.rs  socp.rs
src/vehicle/: mod.rs  params.rs
tests/: test_6dof_forces.rs  test_aero_rigorous.rs  test_atmosphere_rigorous.rs  test_closed_loop.rs  test_csv_output.rs  test_dynamics_6dof.rs  test_forward_simulation.rs  test_gravity.rs  test_gurobi_mip.rs  test_integrator_rigorous.rs  test_montecarlo.rs  test_pdg_3d.rs  test_pdg_socp.rs  test_reentry.rs  test_scenario.rs  test_scvx.rs  test_vehicle.rs
